--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,15 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    
+    <div class="box1">
+        <div class="inner-box1">
+            <input type="text" class="inner-box1">
+        </div>
+        <button class="con-btn">Morse code</button>
+        <div class="inner-box2></div>
+
+
+    </div>
 
 
 
