--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,9 @@
             <input type="text" class="inner-box1">
         </div>
         <button class="con-btn">Morse code</button>
-        <div class="inner-box2></div>
+        <div class="inner-box2">
+        <input type="text" class="inner-box2">
+        </div>
 
 
     </div>
