--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,11 @@
 <body>
     <div class="box1">
         <div class="inner-box1">
-            <input type="text" class="inner-box1">
+            <textarea name="input" class="input" id="input" cols="30" rows="10"></textarea>
         </div>
         <button class="con-btn">Morse code</button>
         <div class="inner-box2">
-        <input type="text" class="inner-box2">
+        <textarea name="output" class="output" id="output cols="30" rows="10"></textarea>
         </div>
 
 
