--- a/index.htm
+++ b/index.htm
@@ -11,17 +11,11 @@
         <div class="inner-box1">
             <textarea name="input" class="input" id="input" cols="30" rows="10"></textarea>
         </div>
-        <button class="con-btn" onclick="a();">Morse code</button>
+        <button class="con-btn">Morse code</button>
         <div class="inner-box2">
         <textarea name="output" class="output" id="output" cols="30" rows="10"></textarea>
         </div>
-
-
     </div>
-
-
-
-
     <script src="index.js"></script>
 </body>
 </html>
